--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,9 @@
   background-size: cover;
   color: $white;
   height: 100vh;
+  @media all and (max-width: 768px) {
+    height: 700px;
+  }
 
   // Nav Bar
   nav {
@@ -56,18 +59,57 @@
     }
 
     p {
+      margin: 0 1%;
       margin-bottom: 15px;
     }
 
     button {
-      background: $contact-us;
-      border-color: $contact-us;
+      background: $blue;
+      border-color: $blue;
       border-radius: 5px;
       color: $white;
       cursor: pointer;
       font-size: 1rem;
       padding: 13px 20px;
       width: 191px;
+    }
+  }
+}
+
+.destinations {
+  header {
+    padding-bottom: 50px;
+    padding-top: 100px;
+    text-align: center;
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin: auto;
+      max-width: 500px;
+      padding: 20px 0;
+    }
+
+    .line {
+      border-bottom: 3px solid $blue;
+      display: inline-block;
+      width: 220px;
+    }
+  }
+
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    @media all and (max-width: 767px) {
+      flex-direction: column;
+    }
+
+    img {
+      padding: 1.5%;
     }
   }
 }
