--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
       margin-bottom: 20px; }
     .jumbotron main p {
       margin: 0 1%;
-      margin-bottom: 15px; }
+      margin-bottom: 30px; }
     .jumbotron main button {
       background: #3c4ba5;
       border-color: #3c4ba5;
@@ -64,17 +64,56 @@
     max-width: 500px;
     padding: 20px 0; }
   .destinations header .line {
-    border-bottom: 3px solid #3c4ba5;
+    border-bottom: 2px solid #3c4ba5;
     display: inline-block;
     width: 220px; }
 .destinations main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  padding-bottom: 100px; }
   @media all and (max-width: 767px) {
     .destinations main {
       flex-direction: column; } }
   .destinations main img {
     padding: 1.5%; }
+
+.features-services {
+  background-color: #f7f7f7;
+  padding-bottom: 120px; }
+  .features-services header {
+    padding-bottom: 50px;
+    padding-top: 120px;
+    text-align: center; }
+    .features-services header h1 {
+      font-size: 2rem;
+      margin-bottom: 20px; }
+    .features-services header p {
+      margin: auto;
+      max-width: 500px;
+      padding: 20px 0; }
+    .features-services header .line {
+      border-bottom: 2px solid #3c4ba5;
+      display: inline-block;
+      width: 220px; }
+  .features-services main {
+    display: flex; }
+    @media all and (max-width: 768px) {
+      .features-services main {
+        flex-wrap: wrap;
+        justify-content: center; } }
+    .features-services main .feature {
+      flex-basis: 33%;
+      padding: 0 30px;
+      padding-bottom: 20px;
+      text-align: center; }
+      @media all and (max-width: 414px) {
+        .features-services main .feature {
+          flex-basis: 100%; } }
+      .features-services main .feature i {
+        color: #3c4ba5; }
+      .features-services main .feature h4 {
+        font-size: 20px;
+        margin-bottom: 25px; }
 
 /*# sourceMappingURL=styles.css.map */
