--- a/css/styles.css
+++ b/css/styles.css
@@ -52,34 +52,40 @@
       padding: 13px 20px;
       width: 191px; }
 
-.destinations header {
-  padding-bottom: 50px;
-  padding-top: 100px;
-  text-align: center; }
-  .destinations header h1 {
-    font-size: 2rem;
-    margin-bottom: 20px; }
-  .destinations header p {
-    margin: auto;
-    max-width: 500px;
-    padding: 20px 0; }
-  .destinations header .line {
-    border-bottom: 2px solid #3c4ba5;
-    display: inline-block;
-    width: 220px; }
-.destinations main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-bottom: 100px; }
-  @media all and (max-width: 767px) {
-    .destinations main {
-      flex-direction: column; } }
-  .destinations main img {
-    padding: 1.5%; }
+.destinations {
+  color: #414a4f;
+  font-family: 'Open Sans', sans-serif; }
+  .destinations header {
+    padding-bottom: 50px;
+    padding-top: 100px;
+    text-align: center; }
+    .destinations header h1 {
+      font-size: 2rem;
+      margin-bottom: 20px; }
+    .destinations header p {
+      margin: auto;
+      max-width: 500px;
+      padding: 20px 0; }
+    .destinations header .line {
+      border-bottom: 2px solid #3c4ba5;
+      display: inline-block;
+      width: 220px; }
+  .destinations main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 100px; }
+    @media all and (max-width: 767px) {
+      .destinations main {
+        flex-direction: column; } }
+    .destinations main img {
+      padding: 1.5%; }
 
 .features-services {
   background-color: #f7f7f7;
+  color: #414a4f;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
   padding-bottom: 120px; }
   .features-services header {
     padding-bottom: 50px;
@@ -109,11 +115,44 @@
       text-align: center; }
       @media all and (max-width: 414px) {
         .features-services main .feature {
-          flex-basis: 100%; } }
+          flex-basis: 100%;
+          padding: 0 1.5% 20px; } }
       .features-services main .feature i {
         color: #3c4ba5; }
       .features-services main .feature h4 {
         font-size: 20px;
         margin-bottom: 25px; }
+
+.testimonials {
+  color: #414a4f;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  margin: auto;
+  max-width: 800px;
+  padding: 20px 5px;
+  text-align: center; }
+  .testimonials header {
+    padding-bottom: 50px;
+    padding-top: 120px;
+    text-align: center; }
+    .testimonials header h1 {
+      font-size: 2rem;
+      margin-bottom: 20px; }
+    .testimonials header p {
+      margin: auto;
+      max-width: 500px;
+      padding: 20px 0; }
+    .testimonials header .line {
+      border-bottom: 2px solid #3c4ba5;
+      display: inline-block;
+      width: 220px; }
+  .testimonials .testimonial-list .quote {
+    font-size: 22px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+    padding: 0 1.5%; }
+  .testimonials .testimonial-list .author {
+    color: #555;
+    margin-bottom: 20px; }
 
 /*# sourceMappingURL=styles.css.map */
