--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,7 +6,7 @@
   background-size: cover;
   color: $white;
   height: 100vh;
-  @media all and (max-width: 768px) {
+  @media all and (max-width: 812px) {
     height: 700px;
   }
 
@@ -79,6 +79,7 @@
 .destinations {
   color: $light-black;
   font-family: 'Open Sans', sans-serif;
+  line-height: 2;
 
   header {
     padding-bottom: 50px;
@@ -87,7 +88,6 @@
 
     h1 {
       font-size: 2rem;
-      margin-bottom: 20px;
     }
 
     p {
@@ -123,6 +123,7 @@
   color: $light-black;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
+  line-height: 2;
   padding-bottom: 120px;
 
 
@@ -133,7 +134,6 @@
 
     h1 {
       font-size: 2rem;
-      margin-bottom: 20px;
     }
 
     p {
@@ -184,14 +184,14 @@
   color: $light-black;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
+  line-height: 2;
   margin: auto;
   max-width: 800px;
   padding: 20px 5px;
   text-align: center;
 
-
   header {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     padding-top: 120px;
     text-align: center;
 
@@ -226,5 +226,69 @@
       margin-bottom: 20px;
     }
   }
+}
 
+.learn-more {
+  background-color: $gray;
+  color: $light-black;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  line-height: 2;
+  padding-bottom: 120px;
+
+  header {
+    padding: 120px 2.5% 50px;
+    text-align: center;
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    p {
+      margin: auto;
+      max-width: 800px;
+      padding: 20px 0;
+    }
+
+    .line {
+      border-bottom: 2px solid $blue;
+      display: inline-block;
+      width: 220px;
+    }
+  }
+
+  form {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    max-width: 800px;
+    padding: 0 1.5%;
+
+    input {
+      color: $light-black;
+      flex: 1;
+      font-size: 18px;
+      margin-right: 30px;
+      padding: 15px;
+
+      @media all and (max-width: 414px) {
+        margin: 0;
+      }
+    }
+
+    a {
+      background-color: $blue;
+      border-radius: 4px;
+      color: $white;
+      font-weight: 800;
+      padding: 10px 42px;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+
+      @media all and (max-width: 414px) {
+        margin: 20px auto;
+      }
+    }
+  }
 }
